# stream-winx-api

./: .env.example  .gitignore  README.md  api.yaml  genstring.py  pyproject.toml
.github/workflows/: Pylint.yml  pylint.yml
api/v1/: __init__.py  ai.py  health.py  movies.py  posts.py  stream.py  videos.py
app/: config.py  logging.py  main.py  telegram_client.py
app/api/v1/: __init__.py  stream.py  videos.py
app/repositories/: __init__.py  telegram_repository.py
app/schemas/: __init__.py  health.py  pagination.py  post.py
app/services/: streaming.py
core/: __init__.py  config.py  logging.py  server.py
core/ai/: openai.py
core/cache/: __init__.py  cache_manager.py
core/integrations/: __init__.py  telegram.py  telegram_client.py  telegram_repository.py
core/utils/: __init__.py  decode_session.py  parse_content.py
static/doc/: doc.html  openapi.yaml
tests/: load_test.py
